𝐜𝐫𝐞𝐚𝐭𝐞 𝐛𝐲 𝐝𝐚𝐫𝐤 𝐩𝐫𝐢𝐧𝐜𝐞

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta name="google-site-verification" content="faOesrCQVUWaiNPqOdTovLfIUO3hnAgPS4V0akbiVxk" />
+   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index.html</title>
+</head>
+<body>
+    <p>This ia my first page.</p>
+</body>
+</html>
